--- a/frontend_AlmendraRaed/src/app/component/hero/hero.component.css
+++ b/frontend_AlmendraRaed/src/app/component/hero/hero.component.css
@@ -1,5 +1,6 @@
 #banner {
     height: 650px;
+    background-image: url(https://raw.githubusercontent.com/Ladytoxic/PortfolioAlmendraRaed/main/frontend_AlmendraRaed/src/assets/banner2.png?token=GHSAT0AAAAAABU3ET5KZBCETHN253C3U4DCYV5CNOA);
     background-position: top left;
     background-repeat: no-repeat;
     background-size: 100%;
