--- a/frontend_AlmendraRaed/src/app/component/hero/hero.component.css
+++ b/frontend_AlmendraRaed/src/app/component/hero/hero.component.css
@@ -1,6 +1,6 @@
 #banner {
     height: 650px;
-    background-image: url(https://raw.githubusercontent.com/Ladytoxic/PortfolioAlmendraRaed/main/frontend_AlmendraRaed/src/assets/banner2.png?token=GHSAT0AAAAAABU3ET5KZBCETHN253C3U4DCYV5CNOA);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/ladytoxic4-4dbac.appspot.com/o/Img%2Fportfolio%2Fbanner2.png?alt=media&token=0efa9643-6435-4ad1-936b-b85b650190e4);
     background-position: top left;
     background-repeat: no-repeat;
     background-size: 100%;
