--- a/frontend_AlmendraRaed/src/app/component/header/header.component.html
+++ b/frontend_AlmendraRaed/src/app/component/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark bg-gradient  navbar-expand-lg fixed-top">
+<nav class="navbar navbar-dark bg-dark bg-gradient  navbar-expand-lg">
     <div class="container-fluid" id="home">
         <a class="navbar-brand" href="#banner"><img class="rounded-circle" [src]="miPorfolio.logotipo" width="90px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
