--- a/frontend_AlmendraRaed/src/app/app.component.html
+++ b/frontend_AlmendraRaed/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+
+<app-header></app-header>
+<app-hero></app-hero>
+<app-acercademi></app-acercademi>
+<app-educacion></app-educacion>
+<app-experciencia></app-experciencia>
+<app-footer></app-footer>
