--- a/frontend_AlmendraRaed/src/app/component/header/header.component.html
+++ b/frontend_AlmendraRaed/src/app/component/header/header.component.html
@@ -6,8 +6,8 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-center">
+                <li class="nav-item ">
                     <a class="nav-link" href="#acerca_de_mi">Acerca de mi</a>
                 </li>
                 <li class="nav-item">
@@ -27,7 +27,7 @@
                 </li>
             </ul>
 
-            <form class="d-flex" role="search">
+            <form class="d-flex text-center" role="search">
                 <a class="btn btn-outline-light btn-floating m-1" href="{{miPorfolio.github}}" role="button"><i
                         class="bi bi-github"></i></a>
                 <a class="btn btn-outline-light btn-floating m-1" href="{{miPorfolio.linkedin}}" role="button"><i
