--- a/frontend_AlmendraRaed/src/app/component/hero/hero.component.css
+++ b/frontend_AlmendraRaed/src/app/component/hero/hero.component.css
@@ -1,6 +1,9 @@
+:root {
+    --banner: {{myTag.banner}};
+}
 #banner {
     height: 650px;
-    background-image: url(https://firebasestorage.googleapis.com/v0/b/ladytoxic4-4dbac.appspot.com/o/Img%2Fportfolio%2Fbanner2.png?alt=media&token=0efa9643-6435-4ad1-936b-b85b650190e4);
+    background-image: var(--banner);
     background-position: top left;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -10,6 +13,7 @@
     text-align: center;
     opacity: 95%;
 }
+banner
 
 #name {
     display: block;
